--- a/projeto 01/css/styles.css
+++ b/projeto 01/css/styles.css
@@ -9,6 +9,7 @@ body {
     height: 500px;
     background-position: right center;
     background-size: cover;
+    border-top: 1px solid transparent;
 }
 
 .hero-content {
@@ -23,6 +24,38 @@ body {
     font-size: 36px;
     text-shadow: 3px 3px 5px red;
     /*x y forçadacor cor*/
+}
+
+.hero nav ul {
+
+    text-align: right;
+    margin: 20px 50px 0 0;
+}
+
+.hero nav li {
+    display: inline-block;
+    list-style: none;
+    margin-left: 10px;
+    border: 1px solid white;
+}
+
+.hero nav a {
+    /*
+    background-color: #000000;
+    background-color: rgb(0,0,0);*/
+    background-color: rgba(0, 0, 0, 0.3);
+    /*Cor com transparencia*/
+    display: block;
+    padding: 15px;
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 12px;
+    letter-spacing: 2px;
+}
+
+.hero nav a:hover{
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 main {
