--- a/projeto 01/css/styles.css
+++ b/projeto 01/css/styles.css
@@ -63,6 +63,14 @@ main {
     margin: auto;
 }
 
+.card{
+    /*
+    display: inline-block;
+    padding: 20px;
+    margin-left: 40px;
+    */
+}
+
 .content-section {
     background-color: white;
     padding: 15px;
