--- a/projeto 01/css/styles.css
+++ b/projeto 01/css/styles.css
@@ -15,15 +15,22 @@ body {
 .hero-content {
     text-align: center;
     color: white;
-    margin-top: 50px;
+    margin-top: 150px;
 }
 
 .hero-content h1 {
     /*Formata todo h1 que esta dentro da seguinte classe*/
     text-transform: uppercase;
-    font-size: 36px;
+    font-size: 59px;
     text-shadow: 3px 3px 5px red;
     /*x y forçadacor cor*/
+}
+
+.hero-content p {
+    background-color: rgba(0, 0, 0, .8);
+    display: inline-block;
+    padding: 10px;
+    border-bottom: 2px solid white;
 }
 
 .hero nav ul {
@@ -54,7 +61,7 @@ body {
     letter-spacing: 2px;
 }
 
-.hero nav a:hover{
+.hero nav a:hover {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -63,19 +70,36 @@ main {
     margin: auto;
 }
 
-.card{
-    /*
-    display: inline-block;
-    padding: 20px;
-    margin-left: 40px;
-    */
-}
-
 .content-section {
     background-color: white;
     padding: 15px;
     margin-top: 15px;
+    overflow: auto;
 }
+
+.card {
+    width: 32%;
+    float: left;
+    box-sizing: border-box;
+}
+
+.card img {
+    width: 100%;
+    display: block;
+}
+
+.card p {
+    background-color: rgb(53, 52, 52);
+    color: white;
+    margin: 0;
+    padding: 15px;
+}
+
+.card-1,
+.card-2 {
+    margin-right: 2%;
+}
+
 
 footer {
     background-color: #6b6c68;
