--- a/projeto 02/css/style.css
+++ b/projeto 02/css/style.css
@@ -1,1 +1,141 @@
+body {
+    font-family: tahoma, Arial, sans-serif;
+    padding: 0;
+    margin: 0;
+}
 
+.content {
+    width: 1024px;
+    margin: 20px auto;
+}
+
+.content-header {
+    height: 50px;
+    background-color: #162028;
+    position: relative;
+}
+
+.logo-tipo {
+    margin: 5px 0 0 135px;
+}
+
+.content-nav {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+}
+
+.content-nav ul {
+    margin: 0;
+    padding: 0;
+}
+
+.content-nav li {
+    list-style: none;
+    display: inline-block;
+    margin-right: 0 15px 0 0;
+    padding: 10px;
+    padding: 13px;
+}
+
+.content-nav a {
+    color: #425564;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 12px;
+    letter-spacing: 5px;
+    transition: color 0.3s linear;
+}
+
+.content-nav a:hover {
+    color: white;
+}
+
+.portifolio {
+    padding: 50px 100px;
+    text-align: center;
+}
+
+.portifolio h1 {
+    font-size: 36px;
+    color: #252525;
+}
+
+.portifolio p {
+    font-size: 16px;
+    line-height: 2;
+    color: #555555;
+}
+
+.gallary {
+    padding: 0 100px 50px 100px;
+    color: #555;
+    overflow: auto;
+}
+
+.cards {
+    width: 32%;
+    float: left;
+    text-align: center;
+}
+
+.cards-p-title {
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.about {
+    background-color: #003d52;
+    padding: 100px;
+    color: white;
+    background-image: url(../img/bg_detalhe.png);
+    background-repeat: no-repeat;
+    background-position: right bottom;
+}
+
+.about h2 {
+    text-transform: uppercase;
+    font-size: 50px;
+    font-weight: normal;
+}
+
+.about p {
+    line-height: 1.5;
+    width: 70%;
+}
+
+#contact {
+    margin: 50px 0;
+}
+
+#contact address {
+    color: #143f52;
+    text-transform: uppercase;
+    font-size: 26px;
+    font-style: normal;
+    text-align: center;
+    font-weight: bold;
+}
+
+.map {
+    width: 100%;
+    height: 450px;
+    margin-top: 15px;
+}
+
+.map iframe {
+    width: 100%;
+}
+
+.footer-content {
+    margin-top: 30px;
+    background-color: #0b171f;
+    padding: 25px;
+    font-size: 12px;
+    color: #6f8597;
+    letter-spacing: 5px;
+    text-align: center;
+}
