--- a/exercicio-01/css/styles.css
+++ b/exercicio-01/css/styles.css
@@ -1,12 +1,46 @@
-/* create by : Francisco Jair */
+/* create by : Francisco Jair 
+https://www.w3schools.com/css/css3_images.asp
+*/
 
 body {
+    background-color: #BF7D65;
+    margin: 0;
+}
+
+.content {
+    width: 100%;
+}
+
+.content-header {
+    background-color: #8C5C51;
+    height: 95px;
+    margin-top: -15.7px;
+    text-align: right;
+}
+
+.image-content-logo {
+    width: 135px;
+    height: 80px;
+    float: left;
+    border-radius: 8px;
+    margin-top: 5px;
+    margin-left: 115px;
+}
+
+.content-header nav li {
+    display: inline-block;
+    margin-right: 35px;
+    border: 5px solid black;
+    border-radius: 10px;
+    font-size: 20px;
+    margin-top: 16px;
+    padding: 15px;
+}
 
 
-    background-image: url(../img/fundo5.jpg);
-    /* background-size: cover; */
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: right bottom;
+.content-header nav a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    transition: color 0.3s linear;
 }
