--- a/exercicio-01/css/styles.css
+++ b/exercicio-01/css/styles.css
@@ -35,8 +35,19 @@ body {
     font-size: 20px;
     margin-top: 16px;
     padding: 15px;
+    opacity: 0.5;
 }
 
+.content-header nav li:hover {
+    /*Muda a aparencia*/
+    /* opacity: 1;
+    background: #53a7ea; */
+
+    /*Aumenta ou diminui o elemento*/
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+}
 
 .content-header nav a {
     text-decoration: none;
