--- a/exercicio-02/css/styles.css
+++ b/exercicio-02/css/styles.css
@@ -7,14 +7,43 @@ body {
 
 .hearder-content {
     background-color: #3d3d3d;
+    width: 100%;
     height: 100px;
+    display: inline-block;
 }
 
 .img-nav {
     height: 100%;
     margin-left: 150px;
+}
+
+/* .nav-bar {} */
+
+/* .nav-ul {} */
+
+.nav-ul {
+    float: right;
+    list-style-type: none;
+}
+
+.nav-ul li {
+    margin-top: 15px;
+    display: inline-block;
+    margin-right: 30px;
+
+    padding: 10px;
+
     border-color: red;
     border-style: solid;
-    border-width: 5px;
-    box-sizing: border-box;
+    border-width: 3px;
+    border-radius: 9px;
+}
+
+.nav-ul li a {
+    color: white;
+    text-decoration: none;
+    /* margin-right: 39px; */
+    text-transform: uppercase;
+
+
 }
