--- a/exercicio-02/css/styles.css
+++ b/exercicio-02/css/styles.css
@@ -13,8 +13,10 @@ body {
 }
 
 .img-nav {
-    height: 100%;
+    height: 139px;
+    margin-top: -20px;
     margin-left: 150px;
+    position: absolute;
 }
 
 /* .nav-bar {} */
@@ -24,26 +26,28 @@ body {
 .nav-ul {
     float: right;
     list-style-type: none;
+    /* position: relative; */
+    /* margin-top: -85px; */
 }
 
 .nav-ul li {
-    margin-top: 15px;
+    margin-top: 10px;
     display: inline-block;
     margin-right: 30px;
-
     padding: 10px;
-
-    border-color: red;
+    border-color: #b6b6b6;
     border-style: solid;
     border-width: 3px;
-    border-radius: 9px;
+    border-radius: 23px;
+    background-color: rgba(61, 61, 61, 0.3)
+}
+
+.nav-ul li:hover {
+    background-color: rgb(90, 90, 90);
 }
 
 .nav-ul li a {
     color: white;
     text-decoration: none;
-    /* margin-right: 39px; */
     text-transform: uppercase;
-
-
 }
