--- a/exercicio-03/css/styles.css
+++ b/exercicio-03/css/styles.css
@@ -59,3 +59,16 @@ body {
     width: 918px;
     height: 400px;
 }
+
+.content-main {
+    display: inline-block;
+    width: 350px;
+    height: 190px;
+}
+
+.card {}
+
+.card-img {
+    width: 100%;
+    height: 100%;
+}
