--- a/exercicio-03/css/styles.css
+++ b/exercicio-03/css/styles.css
@@ -61,14 +61,32 @@ body {
 }
 
 .content-main {
-    display: inline-block;
-    width: 350px;
-    height: 190px;
+    padding-top: 65px;
+    margin: 0 10px 0 10px;
+    overflow: auto;
 }
 
-.card {}
+.card {
+    width: 31%;
+    float: left;
+    box-sizing: border-box;
+    padding: 0px 14px 0 20px;
+    margin: 0 2px 5px 2px;
+    /*t r b l*/
+
+}
 
 .card-img {
     width: 100%;
-    height: 100%;
+    height: 150px;
+    display: block;
+}
+
+.card p {
+    text-align: justify;
+    color: rgb(53, 52, 52);
+}
+
+.card p:hover {
+    color: rgb(10, 9, 9);
 }
