--- a/exercicio-04/css/styles.css
+++ b/exercicio-04/css/styles.css
@@ -19,9 +19,7 @@ body {
     position: absolute;
 }
 
-.nav-bar {
-    /* position: absolute; */
-}
+/* .nav-bar {} */
 
 .lista-nav {
     margin: 0;
